Implement ide encouraged changes